--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!doctype html>
+<head>
+  <meta charset="utf-8">
+  <meta name="author" content="Paul Lewis" />
+  <meta name="viewport" content="width=device-width">
+  <!-- Import the component -->
+  <script type="module"
+      src="https://unpkg.com/@google/model-viewer@v0.7.2/dist/model-viewer.js">
+  </script>
+
+  <!-- Loads <model-viewer> for old browsers like IE11: -->
+  <script nomodule
+      src="https://unpkg.com/@google/model-viewer@v0.7.2/dist/model-viewer-legacy.js">
+  </script>
+</head>
+<script>
+
+</script>
+<body>
+    <model-viewer ar alt="A 3D model of an astronaut." src="https://yat140.github.io/models/MRModel.gltf" auto-rotate camera-controls background-color="#455A64"></model-viewer>
+</body>
+</html>
